# ishlib

./: .LICENSE_HEADER  .editorconfig  .envrc  .gitignore  .mcp.json  .mdl_style.rb  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  __init__.py  backup  build.pl  build_ishlib.py  ishlib.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-extra.txt  requirements.txt
.claude/: settings.json
.github/workflows/: docs.yml  pre-commit.yml  pylint.yml  pytest.yml  wiki.yml
docs/: index.md  ishfiles.md  ishlib.md  ishlib_shell.md
docs/pyishlib/: command_runner.md  diff.md  dotfile.md  dotfile_applier.md  dotfile_context.md  dotfile_finder.md  dotfile_ignore.md  dotfile_preprocessor.md  dotfile_script.md  environment.md  file_preprocessor.md  index.md  installer.md  installer_apt.md  installer_brew.md  installer_cargo.md  installer_config.md  installer_custom.md  installer_pip.md  installer_winget.md  ish_comp.md  ish_config.md  ish_metadata.md  ishfiles.md  schema_validation.md
pytest/: conftest.py
pytest/integration/: __init__.py  conftest.py
pytest/python/: test_apply_self_links.py  test_cli_command.py  test_cli_passthrough.py  test_command_runner.py  test_command_runner_logging.py  test_compat.py  test_container_backend.py  test_default_shell.py  test_docs_build.py  test_dotfile_applier.py  test_dotfile_context.py  test_dotfile_preprocessor.py  test_externals_config.py  test_externals_engine.py  test_externals_state.py  test_git_repo.py  test_installer.py  test_installer_config.py  test_installer_custom.py  test_installer_custom_os.py  test_installer_mixins.py  test_ish_comp.py  test_ish_config.py  (+21 more)
scripts/: build_ishlib.py  build_pydocs.py  build_wiki.py
src/: array_from_ssv.bash  base.sh  bash_tricks.bash  common.bash  common.sh  docstrings.sh  download_file.sh  dry_run.bash  dumps_and_asserts.bash  find_or_install.bash  git.bash  has_command.sh  has_prefix.sh  main.sh  prints_and_prompts.sh  readme_src.md  strstr.bash  substr.sh
t/: FileCheck.t  IncludeCheck.source_test_with_debug.bash  IncludeCheck.source_test_with_debug.sh  IncludeCheck.source_test_with_debug.zsh  IncludeCheck.t  SyntaxCheck.t  __init__.py  test_execution.py  test_find_or_install.t  test_func-warn.py  test_func_warn.py  test_has_prefix.t  test_shell_noexec_src.py  test_shellcheck_ishlib.py  test_shellcheck_src.py  test_strstr.t
(+182 files in other folders)
