[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishlib"
version = "0.0.0+dev"
description = "Modular shell scripting library and Python toolkit (ishfiles, isholate, ishproject)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Hans Liljestrand", email = "hans@liljestrand.dev"},
]
dependencies = [
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
full = [
  "shtab>=1.8.0",
  "cerberus",
  "jsonschema",
  "PyYAML",
  "tomli_w",
]

[project.scripts]
ishfiles = "pyishlib.ishfiles.cli:main"
isholate = "pyishlib.isholate.cli:main"
ishproject = "pyishlib.ishproject.cli:main"
ishlib-install = "pyishlib.launchers.__main__:main"

[project.urls]
Homepage = "https://github.com/ishkamiel/ishlib"
Source = "https://github.com/ishkamiel/ishlib"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyishlib*"]

[tool.setuptools.package-data]
pyishlib = ["schema/*.json", "completions/*"]

[dependency-groups]
runtime = [
  "tomli; python_version < '3.11'",
]

extras = [
  "shtab>=1.8.0",
  "cerberus",
  "jsonschema",
  "PyYAML",
  "tomli_w",
]

test = [
  "pytest",
  "pytest-xdist",
  # Non-Python test dependencies (cannot be expressed here, see CLAUDE.md
  # > "System dependencies for tests" for the full list):
  #   * shellcheck, dash, zsh -- pytest/shell/ cross-shell coverage
  #   * bubblewrap (bwrap)    -- pytest/integration/ per-scenario sandbox
  # Install on Debian/Ubuntu via:
  #   sudo apt-get install -y shellcheck dash zsh bubblewrap
]

docs = [
  "griffe",
  "mkdocs",
  "mkdocs-material",
]

dev = [
  {include-group = "runtime"},
  {include-group = "test"},
  {include-group = "docs"},
  {include-group = "extras"},
  "mypy",
  "ruff",
]

[tool.ruff]
src = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
disable_error_code = [
  "call-overload",   # @patch decorator overloads
  "attr-defined",    # MagicMock attrs and pytest.mark.*
  "misc",            # decorator-untyped-call chains
  "no-untyped-def",  # conftest fixtures intentionally unannotated
]
check_untyped_defs = false
